--- a/admin/src/app/features/service/service-form/service-form.component.html
+++ b/admin/src/app/features/service/service-form/service-form.component.html
@@ -46,7 +46,7 @@
           <div *ngIf="service.image">
             <label>Ảnh hiện tại:</label>
             <img
-              [src]="service.image"
+              [src]="service.image.url"
               width="120px"
               height="100px"
             />
