--- a/admin/src/app/features/service/service-list/service-list.component.html
+++ b/admin/src/app/features/service/service-list/service-list.component.html
@@ -16,7 +16,7 @@
   <div class="image-list">
     <img
       *ngIf="service.image"
-      [src]="service.image"
+      [src]="service.image.url"
       [alt]="service.name"
       width="200"
       height="200"
