--- a/admin/src/app/features/website-content/website-content-list/website-content-list.component.html
+++ b/admin/src/app/features/website-content/website-content-list/website-content-list.component.html
@@ -6,7 +6,7 @@
   <div>
     <img
       *ngIf="content.image"
-      [src]="content.image"
+      [src]="content.image.url"
       alt="Content Image"
       class="content-image"
     />
