--- a/admin/src/app/app.component.html
+++ b/admin/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet />
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-climbing-dot"
+  [fullScreen]="true"
+  ><p style="color: white">Đang tải...</p></ngx-spinner
+>
+<router-outlet></router-outlet>
