--- a/admin/src/app/features/discount/discount-detail/discount-detail.component.html
+++ b/admin/src/app/features/discount/discount-detail/discount-detail.component.html
@@ -10,7 +10,7 @@
     <div class="popup-section" *ngIf="discount.image">
       <label>Ảnh:</label>
       <img
-        [src]="discount.image"
+        [src]="discount.image.url"
         alt="Discount Image"
         style="max-width: 100px; border-radius: 4px"
       />
