--- a/admin/src/app/features/feature/feature-detail/feature-detail.component.html
+++ b/admin/src/app/features/feature/feature-detail/feature-detail.component.html
@@ -33,7 +33,7 @@
       <div class="image-list">
         <img
           *ngIf="feature.image"
-          [src]="feature.image"
+          [src]="feature.image.url"
           [alt]="feature.name"
           width="200"
           height="200"
