--- a/admin/src/app/features/room-class/room-class.component.html
+++ b/admin/src/app/features/room-class/room-class.component.html
@@ -53,7 +53,7 @@
   <app-room-class-form
     *ngIf="isAddPopupOpen"
     [isEdit]="false"
-    [formData]="newRoomClass"
+    [roomClass]="newRoomClass"
     [features]="features"
     [mainRoomClasses]="mainRoomClasses"
     [imagePreview]="imagePreview"
@@ -69,7 +69,7 @@
   <app-room-class-form
     *ngIf="isEditPopupOpen"
     [isEdit]="true"
-    [formData]="newRoomClass"
+    [roomClass]="newRoomClass"
     [features]="features"
     [mainRoomClasses]="mainRoomClasses"
     [imagePreview]="imagePreview"
