--- a/admin/src/app/features/room/room-detail/room-detail.component.html
+++ b/admin/src/app/features/room/room-detail/room-detail.component.html
@@ -27,7 +27,7 @@
 
     <div class="popup-section">
       <label>Số giường:</label>
-      <span>{{ room.room_class?.bed_amount }}</span>
+      <span>{{ room.room_class?.bed?.quantity }}</span>
     </div>
 
     <div class="popup-section">
