--- a/admin/src/app/features/room-class/room-class-list/room-class-list.component.html
+++ b/admin/src/app/features/room-class/room-class-list/room-class-list.component.html
@@ -2,7 +2,7 @@
   <div>{{ (filter.page - 1) * filter.limit + i + 1 }}</div>
   <div>{{ rc.name }}</div>
   <div>
-    {{ rc.bed_amount }} giường {{ rc.bed_type }} <br />
+    {{ rc.bed.quantity }} giường {{ rc.bed.type }} <br />
     ({{ rc.capacity }})
   </div>
   <!-- <div>{{ rc.description }}</div> -->
