--- a/frontend/src/styles/pages/cart.module.css
+++ b/frontend/src/styles/pages/cart.module.css
@@ -137,8 +137,8 @@
 .darkTable tr,
 .darkTable td,
 .darkTable th {
-  background-color: #000 !important;
-  color: #fff !important;
+  background-color: #000;
+  color: #fff ;
   border-color: #333;
 }
 
