Refactor room class, review, and comment APIs; add pagination
Refactored backend controllers and routes for room class, review, and comment to support more flexible filtering, pagination, and searching. Added endpoints for fetching reviews and comments by room class and user, and included average rating calculation for reviews. Updated frontend API calls to match new backend endpoints and removed unnecessary try/catch blocks for cleaner code. Added SWR dependency and new frontend hooks for data fetching. Improved room class capacity calculation and filtering logic.

--- a/frontend/src/styles/pages/profile.module.css
+++ b/frontend/src/styles/pages/profile.module.css
@@ -53,7 +53,7 @@
   border-radius: 8px;
   cursor: pointer;
   color: #ccc;
-  transition: 0.3s;
+  transition: 0.1s;
   background-color: transparent;
 }
 
@@ -65,9 +65,9 @@
 
 .sidebar .active,
 .active {
-  background-color: #fab320;
-  color: #000;
-  font-weight: bold;
+  background-color: #fab320 !important;
+  color: #000 !important;
+  font-weight: bold !important;
 }
 
 /* Logout Item */
