--- a/frontend/src/styles/layout/header.module.css
+++ b/frontend/src/styles/layout/header.module.css
@@ -106,3 +106,16 @@
 .searchInput::placeholder {
   color: white;
 }
+@media (max-width: 768px) {
+  :global(.navbar) {
+    background: black !important;
+    padding: 10px;
+    text-align: center;
+  }
+
+  :global(.navbar .nav-link),
+  :global(.navbar .navbar-brand),
+  :global(.navbar .bi) {
+    color: white !important;
+  }
+}
