--- a/admin/src/app/features/review/review-reply-popup/review-reply-popup.component.html
+++ b/admin/src/app/features/review/review-reply-popup/review-reply-popup.component.html
@@ -1,6 +1,6 @@
 <div class="popup-add-popup" *ngIf="review">
   <div class="popup-content tw-animate-fadeIn">
-    <h2>Phản hồi bình luận</h2>
+    <h2>Phản hồi đánh giá</h2>
     <div class="popup-section">
       <strong>Người gửi:</strong>
       <span>
