--- a/admin/src/app/features/review/review.component.html
+++ b/admin/src/app/features/review/review.component.html
@@ -1,5 +1,5 @@
 <div class="comment-management-card">
-  <h2>Quản lí bình luận</h2>
+  <h2>Quản lí đánh giá</h2>
 
   <!--- Thanh lọc bình luận -->
   <app-review-filter
