--- a/admin/src/app/shared/components/footer/footer.component.html
+++ b/admin/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<!-- <footer class="footerWrapper container-fluid">
+<footer class="footerWrapper container-fluid">
   <div class="container d-flex justify-content-between flex-wrap">
     <div class="col-md-4">
       <div class="mt-4 mb-3">
@@ -37,8 +37,8 @@
       </div>
     </div>
   </div>
-</footer> -->
-<footer class="footer">
+</footer>
+<!-- <footer class="footer">
   <div class="container-fluid d-flex justify-content-between">
     <nav class="pull-left">
       <ul class="nav">
@@ -62,4 +62,4 @@
       <a target="_blank" href="https://themewagon.com/">ThemeWagon</a>.
     </div>
   </div>
-</footer>
+</footer> -->
