--- a/admin/src/app/features/home/overview/overview.component.html
+++ b/admin/src/app/features/home/overview/overview.component.html
@@ -10,7 +10,7 @@
           </div>
           <div class="col col-stats ms-3 ms-sm-0">
             <div class="numbers">
-              <p class="card-category">Số người đang lưu trú</p>
+              <p class="card-category">Số người lưu trú hôm nay</p>
               <h4 class="card-title tw-text-center">{{ totalUsers }}</h4>
             </div>
           </div>
