--- a/admin/src/app/features/home/home.component.html
+++ b/admin/src/app/features/home/home.component.html
@@ -15,6 +15,10 @@
       <div class="col-md-4">
         <app-booking-statistics
           [statusStats]="statusStats"
+          [period]="period"
+          [from]="statusFrom"
+          [to]="statusTo"
+          (periodChange)="fetchBookingStatusStatistics($event.period, $event.from, $event.to)"
         ></app-booking-statistics>
       </div>
     </div>
@@ -30,6 +34,7 @@
                 </button>
                 <button
                   class="btn btn-icon btn-link btn-primary btn-xs btn-refresh-card"
+                  (click)="fetchCancelRateStatistics()"
                 >
                   <span class="fa fa-sync-alt"></span>
                 </button>
